Adds a pass at Arduino serial communication and stores state locally
